[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art Assets/Bullets and Missiles/ShotgunBullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.25227

[sub_resource type="CircleShape2D" id=2]
radius = 9.10048

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
sprite_frames = SubResource( 3 )
kill_time = 3.0

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="EnemyCollision2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
